# retort

./: .gitignore  BLOG.md  CLAUDE.md  LICENSE  README.md  aggregate_findings.py  alembic.ini  harness-blog.md  manifest  master.csv  master.db  maturity-report.txt  model-blog.md  optimal-blog.html  optimal-blog.md  platform-evolution-engine-plan.md  prompt-blog.md  pyproject.toml
docs/: concepts.md  (+8 more)
experiment-1/runs/language=rust_model=opus_tooling=beads/rep3/: Cargo.toml  README.md  assessment.json  evaluation.md  findings.jsonl
experiment-1/runs/language=rust_model=opus_tooling=beads/rep3/src/: lib.rs
experiment-1/runs/language=rust_model=opus_tooling=none/rep1/: Cargo.toml  assessment.json  evaluation.md  findings.jsonl  stack.json
experiment-1/runs/language=rust_model=opus_tooling=none/rep1/src/: lib.rs  main.rs
experiment-1/runs/language=rust_model=opus_tooling=none/rep1/tests/: integration.rs
experiment-1/runs/language=rust_model=sonnet_tooling=none/rep1/: Cargo.toml  assessment.json  evaluation.md  findings.jsonl
experiment-1/runs/language=rust_model=sonnet_tooling=none/rep2/: Cargo.toml  assessment.json  evaluation.md  findings.jsonl
experiment-1/runs/language=rust_model=sonnet_tooling=none/rep3/: Cargo.toml  assessment.json  evaluation.md  findings.jsonl
experiment-1/runs/language=rust_model=sonnet_tooling=none/rep3/src/: db.rs  lib.rs  models.rs
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=ATDD/rep1/: README.md  _meta.json  evaluation.md  pyproject.toml  scores.json
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=ATDD/rep1/brazilian_soccer_mcp/: __init__.py  knowledge_base.py  loader.py  server.py
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=ATDD/rep1/summary/: modules.md
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=ATDD/rep1/tests/: conftest.py
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=TDD/rep1/: _meta.json  evaluation.md  findings.jsonl  pyproject.toml
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=TDD/rep1/brazilian_soccer/: data_loader.py  normalize.py  server.py
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=TDD/rep1/brazilian_soccer_mcp.egg-info/: SOURCES.txt  entry_points.txt
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=TDD/rep1/summary/: flow.md  index.md  modules.md
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=TDD/rep1/tests/: test_queries.py  test_server.py
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=neutral/rep2/: README.md  _meta.json  conftest.py  findings.jsonl  pyproject.toml
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=neutral/rep2/bsoccer/: __init__.py  format.py  normalize.py
experiment-13/runs/language=python_model=opus-4.8-fast_prompt=neutral/rep2/summary/: flow.md  index.md
experiment-14/runs/language=rust_model=opus-4.8-fast_prompt=TDD/rep1/: Cargo.toml  assessment.json  scores.json  stack.json
experiment-14/runs/language=rust_model=opus-4.8-fast_prompt=TDD/rep1/src/: lib.rs  mcp.rs  query.rs
experiment-14/runs/language=rust_model=opus-4.8-fast_prompt=TDD/rep1/summary/: interfaces.md
experiment-14/runs/language=rust_model=sonnet_prompt=ATDD/rep1/: Cargo.toml  _meta.json  assessment.json  findings.jsonl  stack.json
experiment-14/runs/language=rust_model=sonnet_prompt=ATDD/rep1/src/: data.rs  main.rs  normalize.rs  tools.rs
experiment-14/runs/language=rust_model=sonnet_prompt=ATDD/rep1/summary/: index.md
experiment-14/runs/language=rust_model=sonnet_prompt=TDD/rep1/: Cargo.toml  assessment.json
experiment-2/runs/language=python_model=opus_tooling=beads/rep1/: assessment.json  evaluation.md  findings.jsonl  pyproject.toml  scores.json
experiment-2/runs/language=python_model=opus_tooling=none/rep1/: .idiomatic_cache.json  assessment.json  evaluation.md  findings.jsonl  pyproject.toml  scores.json
experiment-2/runs/language=rust_model=opus_tooling=beads/rep1/: Cargo.toml  _meta.json  evaluation.md  findings.jsonl
experiment-3/runs/language=rust_model=claude-opus-4-7_tooling=beads/rep1-failed/: .idiomatic_cache.json  Cargo.toml  _meta.json
experiment-5/runs/language=python_model=claude-opus-4-7_tooling=beads/rep1/: _meta.json  assessment.json  evaluation.md  findings.jsonl  pyproject.toml  stack.json
experiment-5/runs/language=python_model=claude-opus-4-7_tooling=beads/rep3/: README.md  pyproject.toml
experiment-5/runs/language=python_model=claude-opus-4-7_tooling=beads/rep3-failed/: _meta.json  pyproject.toml  requirements.txt
experiment-5/runs/language=python_model=claude-opus-4-7_tooling=none/rep1/: assessment.json  evaluation.md  findings.jsonl  pyproject.toml
experiment-5/runs/language=python_model=claude-opus-4-7_tooling=none/rep3/: README.md  assessment.json  evaluation.md  findings.jsonl  pyproject.toml
experiment-5/runs/language=python_model=claude-opus-4-8_tooling=beads/rep2/: assessment.json  evaluation.md  findings.jsonl  pyproject.toml  requirements.txt
experiment-5/runs/language=python_model=claude-opus-4-8_tooling=none/rep2-failed/: _meta.json  pyproject.toml
experiment-5/runs/language=python_model=claude-opus-4-8_tooling=none/rep3/: assessment.json  demo.py  findings.jsonl  pyproject.toml
experiment-5/runs/language=rust_model=claude-opus-4-7_tooling=none/rep3/: Cargo.toml  findings.jsonl
experiment-5/runs/language=rust_model=claude-opus-4-8_tooling=none/rep1/: Cargo.toml  _meta.json  assessment.json  findings.jsonl
experiment-6/runs/language=rust_model=claude-opus-4-7_tooling=beads/rep1/: Cargo.toml  _meta.json  assessment.json  evaluation.md  findings.jsonl
experiment-6/runs/language=rust_model=claude-opus-4-7_tooling=none/rep3/: Cargo.toml  README.md  assessment.json  evaluation.md  findings.jsonl
experiment-6/runs/language=rust_model=claude-opus-4-8_tooling=beads/rep3/: Cargo.toml  README.md  _meta.json  assessment.json  evaluation.md  findings.jsonl
experiment-6/runs/language=rust_model=claude-opus-4-8_tooling=none/rep2/: Cargo.toml  assessment.json  evaluation.md
(+8945 files in other folders)
