[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retort"
version = "0.1.0"
description = "Platform Evolution Engine. Distill the best from the combinatorial mess."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Adrian Cockcroft" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.5",
]

[project.scripts]
retort = "retort.cli:main"

[project.urls]
Repository = "https://github.com/adrianco/retort"

[tool.hatch.build.targets.wheel]
packages = ["src/retort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source_pkgs = ["retort"]
branch = true

[tool.coverage.report]
show_missing = true
