[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retort"
version = "0.1.0"
description = "Platform Evolution Engine. Distill the best from the combinatorial mess."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Adrian Cockcroft" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "pluggy>=1.3",
    "pydantic>=2.0",
    "pyDOE3>=1.0",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "sqlalchemy>=2.0",
    "statsmodels>=0.14",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.5",
]

[project.scripts]
retort = "retort.cli:main"

[project.entry-points."retort.plugins"]
# Third-party plugins register here via their own pyproject.toml:
#   [project.entry-points."retort.plugins"]
#   my_plugin = "my_package.retort_plugin"

[project.urls]
Repository = "https://github.com/adrianco/retort"

[tool.hatch.build.targets.wheel]
packages = ["src/retort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source_pkgs = ["retort"]
branch = true

[tool.coverage.report]
show_missing = true
