[package]
name = "book-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "book-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
