[package]
name = "book-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
