[project]
name = "brazilian-soccer-mcp"
version = "1.0.0"
description = "MCP server answering natural-language questions about Brazilian soccer"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[project.scripts]
brazilian-soccer-mcp = "brazilian_soccer_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["brazilian_soccer_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
