[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brazilian-soccer-mcp"
version = "1.0.0"
description = "MCP server providing a knowledge-graph interface over Brazilian soccer datasets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
brazilian-soccer-mcp = "brazilian_soccer.server:main"
brazilian-soccer-demo = "brazilian_soccer.demo:main"

[tool.setuptools]
packages = ["brazilian_soccer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
