[project]
name = "brazilian-soccer-mcp"
version = "1.0.0"
description = "MCP server providing natural-language query access to Brazilian soccer datasets (matches, teams, players, competitions)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
brazilian-soccer-mcp = "bsoccer.server:main"
bsoccer-cli = "bsoccer.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bsoccer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
