[package]
name = "brazilian-soccer-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brazilian-soccer-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serde_json = "1"
