[package]
name = "brazilian-soccer-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "brazilian_soccer_mcp"
path = "src/lib.rs"

[[bin]]
name = "brazilian-soccer-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
