[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brazilian-soccer-mcp"
version = "0.1.0"
description = "MCP server for Brazilian soccer knowledge-graph queries"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0",
  "pandas>=2.0",
]

[project.scripts]
brazilian-soccer-mcp = "brazilian_soccer.server:main"

[tool.setuptools.packages.find]
include = ["brazilian_soccer*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
