[package]
name = "brazilian-soccer-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "brazilian_soccer_mcp"
path = "src/lib.rs"

[[bin]]
name = "brazilian-soccer-mcp"
path = "src/main.rs"

[dependencies]
csv = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
