[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brazilian-soccer-mcp"
version = "0.1.0"
description = "MCP server exposing a knowledge graph over Brazilian soccer datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Brazilian Soccer MCP"}]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-bdd>=7",
]

[project.scripts]
brazilian-soccer-mcp = "soccer_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"soccer_mcp" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
