[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brazilian-soccer-mcp"
version = "0.1.0"
description = "MCP server providing a knowledge-graph view over Brazilian soccer datasets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brazilian Soccer MCP" }]
dependencies = [
    "pandas>=2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
brazilian-soccer-mcp = "brazilian_soccer_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
