[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brazilian-soccer-mcp"
version = "0.1.0"
description = "MCP server for Brazilian soccer data queries"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
brazilian-soccer-mcp = "brazilian_soccer_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
