[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brazilian-soccer-mcp"
version = "1.0.0"
description = "MCP server providing a knowledge-graph-style query interface over Brazilian soccer datasets."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
brazilian-soccer-mcp = "brazilian_soccer_mcp.server:main"

[tool.setuptools.packages.find]
include = ["brazilian_soccer_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
