[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brazilian-soccer-mcp"
version = "1.0.0"
description = "MCP server providing a queryable knowledge base of Brazilian soccer (Brasileirão, Copa do Brasil, Libertadores, FIFA players)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
brazilian-soccer-mcp = "brazilian_soccer_mcp.server:main"

[tool.setuptools]
packages = ["brazilian_soccer_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
