[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brazilian-soccer-mcp"
version = "1.0.0"
description = "MCP server + knowledge graph for Brazilian soccer (matches, players, competitions)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["mcp>=1.2.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
brazilian-soccer-mcp = "brazilian_soccer_mcp.server:main"

[tool.setuptools]
packages = ["brazilian_soccer_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
