[package]
name = "brazilian-soccer-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server providing query access to Brazilian soccer match and player datasets"
license = "MIT"

[[bin]]
name = "brazilian-soccer-mcp"
path = "src/main.rs"

[lib]
name = "brazilian_soccer_mcp"
path = "src/lib.rs"

[dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
