[package]
name = "brazilian_soccer_mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server providing a knowledge interface over Brazilian soccer datasets"
license = "MIT"

[[bin]]
name = "brazilian-soccer-mcp"
path = "src/main.rs"

[lib]
name = "brazilian_soccer_mcp"
path = "src/lib.rs"

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
