[package]
name = "book_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "book_api"
path = "src/lib.rs"

[[bin]]
name = "book_api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
